# gibbon

./: .gitignore  Cargo.toml  README.md
examples/: compression_ratio.rs  csv_to_packed.rs  test_data.csv
src/: bit_repr.rs  bit_string_stream.rs  double_stream.rs  double_stream_lead_trail.rs  lib.rs  stream.rs  time_and_value_stream.rs  timestamp_stream.rs  vec_stream.rs
